# standjob

./: .dockerignore  .env  .gitignore  Dockerfile.backend  Dockerfile.frontend  GRAPH_SKILL_REVIEW.md  GRAPH_SKILL_REVIEW_V2.md  README.md  docker-compose.yml  nginx.conf  pyproject.toml
backend/: ARCHITECTURE.md  __init__.py  api.py  cli.py  loaders.py
backend/graph/: __init__.py  builder.py  nodes.py  state.py
backend/references/: rubric.md  textbook.md
backend/scripts/: progress.py  validate_sheets.py
data/: scoring.xlsx
scripts/: e2e_regression.py  graph_regression.py  graph_regression_baseline.json
web/: README.md  package-lock.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: ChatBubble.tsx  ChatInput.tsx  StatusBar.tsx
web/src/lib/: api.ts
