[project]
name = "standjob"
version = "0.1.0"
description = "岗标辅导系统 - AI 引导式岗位标准化辅导"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "langchain>=1.3.1",
    "langchain-anthropic>=1.4.3",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "langchain-qdrant==1.1.0",
    "langgraph>=1.2.1",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "openpyxl>=3.1.5",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "uvicorn>=0.48.0",
]

[project.scripts]
standjob-cli = "backend.cli:main"
